Vulkan Chooser Launcher is working and launching Vulkan Application. An error based around swapchain is still being throw and will be addressed next